flapivor/tests/m3/hopix/typechecker/bad/37-record-matching-04.hopix
type T = { x : Int }
type U = { z : Int }

val main : Int = case { x = 0 }<> { { z = (y : Int) }<> => y }